# story-wrapper

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: 2023.09.20 - Matching Character Experiments.ipynb  2023.09.20 - More LLM Integration Experiments.ipynb  2023.09.21 - Testing Character Matching.ipynb  2023.09.23 - LLM Integration Experiments.ipynb  2023.09.24 - Testing Character Matching - Different Text - 9932.ipynb  Usage Examples.ipynb
src/story_wrapper/: config_spacy.py  utils.py
src/story_wrapper/data_loaders/: book.py  gutenberg.py  parseRDF.py
src/story_wrapper/models/: __init__.py  character.py  occurrence.py  story.py
tests/: conftest.py  test_book.py  test_character.py  test_data_book.txt  test_gutenberg.py  test_occurrence.py  test_story.py
